2014-03-11 Fix: _vformat() crashed on unknown % sequences.
2014-03-11 Fix: limited octal escape sequences to three digits.
2014-03-11 Fix: added code to handle void values in expressions.
2014-03-11 Improved long usage (-d ?), misc cosmetical fixes.
2014-03-09 Updated misc. docs.
2014-03-06 Added code to fuse logic ops and conditional jumps (optimization).
2014-02-26 Fixed code generator bug in armv6 back end.
2014-02-26 Fixed alignment in galloc() for cross-compilation.
2014-02-25 Added vprintf(), vfprintf(), and vsprintf() functions.
2014-02-25 Added (slightly incompatible) varargs mechanism.
2014-02-23 Fixed duplicate register use in 8086 CG.
2014-02-21 Made s86 keep its code output on disk instead of in memory.
2014-02-20 Moved switch tables to code segment.
2014-02-19 Documented SLD (small loader) file formats.
2014-02-18 Fixed DOSRELOC bug in SLD.
2014-02-17 Successfully cross-compiled main(){printf("hi\n");} for DOS/8086.
2014-02-17 Fixed wrong DUP argument in S86.
2014-02-17 Fixed wrong return value in fread().
2014-02-16 Updated docs, misc. cosmetic changes.
2014-02-15 Added tests/sys.c program for testing crt0 functions.
2014-02-15 Fixed %p in *printf functions (wrong result for values < 0).
2014-02-14 Wrote simple crt0 test suite.
2014-02-14 Added fcntl.h include file, added SEEK_* constants to unistd.h.
2014-02-13 Removed libc dependencies from freebsd-armv6 crt0.
2014-02-12 Removed libc dependencies from freebsd-386 crt0.
2014-02-12 Re-organized targets/ directory, adapted configure script.
2014-02-07 Added FreeBSD/armv6 crt0 (crt0-freebsd-armv6.s).
2014-02-06 Added FreeBSD/armv6 back-end (cgarmv6.c).
2014-02-05 Added alignment option to galloc() for CPUs with aligned access.
2014-02-03 Fix: wait_bye should not be visible at C level in Darwin crt0.
2014-02-03 Added version info (-V option).
2014-02-02 Renamed cerror() due to libc conflict (FreeBSD 10.0-RC5). wtf?!
2014-01-19 Updated configure script.
2014-01-19 Removed old, stack-based back-end.