@@ -1,0 +1,13 @@
+0---|----1----|----2----|----3----|----4----|----5
+AAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAA
+BBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBB
+CCCCCCCCCCCCCCCCCCCCCCCCCCCCCCCCCCCCCCCCCCCCCCCCCC
+|                        DDDDDDDDDDDDDDDDDDDDDDDD|
+|EEEEEEEEEEEEEEEEEEEEEEEE                        |
+12345678901234567890123456789012345678901234567890
+                                            -12345
+-12345                                           |
+00000000000000000000000000000000000000000000012345
+0xabcd                43981                0125715
+%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
+0---|----1----|----2----|----3----|----4----|----5
